--- a/Pandas_Assignments/chipotle_exercises.ipynb
+++ b/Pandas_Assignments/chipotle_exercises.ipynb
@@ -8,27 +8,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check out Chipotle Exercises Video Tutorial to watch a data scientist go through the exercises\n",
+    "\n",
+    "#### This time we are going to pull data directly from the internet. Special thanks to: https://github.com/justmarkham for sharing the dataset and materials."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1. Import the necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Step 1. Import the necessary libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Step 2. Import the dataset from this [address](https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv). \n",
-    "### Step 3. Assign it to a variable called chipo.\n",
-    "url = 'https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv'\n",
-    "    \n",
-    "chipo = pd.read_csv(url, sep = '\\t')\n"
+    "### Step 2. Import the dataset from this [address](https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv). \n"
    ]
   },
   {
@@ -37,11 +46,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Step 2. Import the dataset from this [address](https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv). \n",
-    "### Step 3. Assign it to a variable called chipo.\n",
-    "url = 'https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv'\n",
-    "    \n",
-    "chipo = pd.read_csv(url, sep = '\\t')\n"
+    "url = 'https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3. Assign it to a variable called chipo."
    ]
   },
   {
@@ -49,10 +61,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "chipo = pd.read_csv(url, sep = '\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Step 5. What is the number of observations in the dataset?\n",
-    "# Soln. 1\n",
-    "\n",
+    "# Soln. 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "chipo.shape[0]  # entries <= 4622 observations"
    ]
   },
@@ -237,332 +263,6 @@
    "source": [
     "### Step 17. How many different items are sold?\n",
     "chipo.item_name.value_counts().count()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Excercise NO. 3. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 1. Import the necessary libraries\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 2. Import the dataset from this [address](https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user). \n",
-    "### Step 3. Assign it to a variable called users and use the 'user_id' as index\n",
-    "users = pd.read_csv('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user', \n",
-    "                      sep='|', index_col='user_id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 4. See the first 25 entries\n",
-    "users.head(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 5. See the last 10 entries\n",
-    "users.tail(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 6. What is the number of observations in the dataset?\n",
-    "users.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 7. What is the number of columns in the dataset?\n",
-    "users.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 8. Print the name of all the columns.\n",
-    "users.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 9. How is the dataset indexed?\n",
-    "# \"the index\" (aka \"the labels\")\n",
-    "users.index\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 10. What is the data type of each column?\n",
-    "users.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 11. Print only the occupation column\n",
-    "users.occupation\n",
-    "\n",
-    "#or\n",
-    "\n",
-    "users['occupation']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 12. How many different occupations are in this dataset?\n",
-    "users.occupation.nunique()\n",
-    "#or by using value_counts() which returns the count of unique elements\n",
-    "#users.occupation.value_counts().count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 13. What is the most frequent occupation?\n",
-    "#Because \"most\" is asked\n",
-    "users.occupation.value_counts().head(1).index[0]\n",
-    "\n",
-    "#or\n",
-    "#to have the top 5\n",
-    "\n",
-    "# users.occupation.value_counts().head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Step 14. Summarize the DataFrame.\n",
-    "users.describe() #Notice: by default, only the numeric columns are returned. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 15. Summarize all the columns\n",
-    "users.describe(include = \"all\") #Notice: By default, only the numeric columns are returned."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 16. Summarize only the occupation column\n",
-    "users.occupation.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 17. What is the mean age of users?\n",
-    "round(users.age.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 18. What is the age with least occurrence?\n",
-    "users.age.value_counts().tail() #7, 10, 11, 66 and 73 years -> only 1 occurrence"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Excercise 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 1. Go to https://www.kaggle.com/openfoodfacts/world-food-facts/data\n",
-    "###  Step 2. Download the dataset to your computer and unzip it.\n",
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 3. Use the tsv file and assign it to a dataframe called food\n",
-    "food = pd.read_csv('~/Desktop/en.openfoodfacts.org.products.tsv', sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 4. See the first 5 entries\n",
-    "food.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 5. What is the number of observations in the dataset?\n",
-    "food.shape #will give you both (observations/rows, columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "food.shape[0] #will give you only the observations/rows number"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 6. What is the number of columns in the dataset?\n",
-    "print(food.shape) #will give you both (observations/rows, columns)\n",
-    "print(food.shape[1]) #will give you only the columns number\n",
-    "\n",
-    "#OR\n",
-    "\n",
-    "food.info() #Columns: 163 entries\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 7. Print the name of all the columns.\n",
-    "food.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 8. What is the name of 105th column?\n",
-    "food.columns[105]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 9. What is the type of the observations of the 105th column?\n",
-    "food.dtypes['-glucose_100g']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Step 10. How is the dataset indexed?\n",
-    "food.index\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '/bin/python3.12' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python3.12 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "### Step 11. What is the product name of the 19th observation?\n",
-    "food.values[18][7]\n"
    ]
   }
  ],
