--- a/Pandas_Assignments/occupation_exercises.ipynb
+++ b/Pandas_Assignments/occupation_exercises.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Excercise NO. 3. Getting and knowing your data "
+    "### Excercise 2: Getting and Knowing Your Data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Check out Occupation Exercises Video Tutorial to watch a data scientist go through the exercises\n",
+    "\n",
+    "##### This time we are going to pull data directly from the internet. Special thanks to: https://github.com/justmarkham for sharing the dataset and materials."
    ]
   },
   {
